Get lists by id
